# before-you-bet

./: ARCHITECTURE_DIAGRAMS.md  README.md  config.py  docker-compose.yml  gamble-bot_CODEBASE.md  main.py  pyproject.toml
frontend/: .dockerignore  Dockerfile  REFACTOR_UI.md  package-lock.json  package.json
frontend/public/favicons/: README.md
frontend/public/logos/: README.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/browse/: page.tsx
frontend/src/app/lookup/: page.tsx
frontend/src/app/lookup/[ticker]/: page.tsx
frontend/src/app/markets/: page.tsx
frontend/src/components/cards/: MarketCard.tsx  MarketCardExpanded.tsx
frontend/src/components/charts/: TimeSeriesChart.tsx
frontend/src/components/ui/: AppShell.tsx  Badge.tsx  ErrorBanner.tsx  LoadingSpinner.tsx  Modal.tsx  Navigation.tsx  SplashScreen.tsx
frontend/src/data/: markets.json
frontend/src/lib/: api.ts  category-icons.tsx  colors.ts  mock-data.ts  theme.tsx  types.ts  utils.ts
src/: __init__.py  calcuations.py  encode_rsa.py  kalshi_client.py  llm_client.py  models.py
ui/: README.md  app.py
