[project]
name = "before-you-bet"
version = "0.1.0"
description = "Kalshi trading analysis API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "cryptography>=43.0.0",
    "openai>=1.0.0",
    "gradient>=3.8.0",
    "streamlit>=1.52.1",
    "plotly>=6.5.0",
    "pandas>=2.3.3",
]
